@@ -5,6 +5,8 @@ version 1.3.3
   name is given
 - Fix bug: "display data" broken in gui program for long datasets
   ("press a key to continue" mechanism was invoked erroneously)
+- Fix bug: wrong variable shown when you select "Display actual,
+  fitted, residual" for a GARCH model
 - Fixes for appending data (make more flexible: allow appending of
   observations and/or variables)
 - Fixes for cointegration tests: improve dialogs and prevent crash
